--- a/K53_Learners_Test/a_heavyvehicle_test.html
+++ b/K53_Learners_Test/a_heavyvehicle_test.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 64</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 64</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -177,7 +177,7 @@
     <h3>Question 3 of 64</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -254,7 +254,7 @@
     <h3>Question 4 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -330,7 +330,7 @@
     <h3>Question 5 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -407,7 +407,7 @@
     <h3>Question 6 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -489,7 +489,7 @@
     <h3>Question 7 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -566,7 +566,7 @@
     <h3>Question 8 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -647,7 +647,7 @@
     <h3>Question 9 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -724,7 +724,7 @@
     <h3>Question 10 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -772,7 +772,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -846,7 +846,7 @@
     <h3>Question 11 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -924,7 +924,7 @@
     <h3>Question 12 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1006,7 +1006,7 @@
     <h3>Question 13 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1083,7 +1083,7 @@
     <h3>Question 14 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1164,7 +1164,7 @@
     <h3>Question 15 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1211,7 +1211,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1308,7 +1308,7 @@
     <h3>Question 16 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1394,7 +1394,7 @@
     <h3>Question 17 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1470,7 +1470,7 @@
     <h3>Question 18 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1552,7 +1552,7 @@
     <h3>Question 19 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1628,7 +1628,7 @@
     <h3>Question 20 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1676,7 +1676,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1751,7 +1751,7 @@
     <h3>Question 21 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1826,7 +1826,7 @@
     <h3>Question 22 of   64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1907,7 +1907,7 @@
     <h3>Question 23 of   15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1984,7 +1984,7 @@
     <h3>Question 24 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2065,7 +2065,7 @@
     <h3>Question 25 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2141,7 +2141,7 @@
     <h3>Question 26 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2223,7 +2223,7 @@
     <h3>Question 27 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2301,7 +2301,7 @@
     <h3>Question 28 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2383,7 +2383,7 @@
     <h3>Question 29 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2460,7 +2460,7 @@
     <h3>Question 30 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2508,7 +2508,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2605,7 +2605,7 @@
     <h3>Question 31 of 64</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2682,7 +2682,7 @@
     <h3>Question 32 of 64</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2762,7 +2762,7 @@
     <h3>Question 33 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2839,7 +2839,7 @@
     <h3>Question 34 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2919,7 +2919,7 @@
     <h3>Question 35 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2965,7 +2965,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3033,7 +3033,7 @@
     <h3>Question 36 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3115,7 +3115,7 @@
     <h3>Question 37 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3192,7 +3192,7 @@
     <h3>Question 38 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3273,7 +3273,7 @@
     <h3>Question 39 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3350,7 +3350,7 @@
     <h3>Question 40 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3398,7 +3398,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3472,7 +3472,7 @@
     <h3>Question 41 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3549,7 +3549,7 @@
     <h3>Question 42 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3630,7 +3630,7 @@
     <h3>Question 43 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3707,7 +3707,7 @@
     <h3>Question 44 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3789,7 +3789,7 @@
     <h3>Question 45 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3889,7 +3889,7 @@
     <h3>Question 46 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -3980,7 +3980,7 @@
     <h3>Question 47 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4056,7 +4056,7 @@
     <h3>Question 48 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4138,7 +4138,7 @@
     <h3>Question 49 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4214,7 +4214,7 @@
     <h3>Question 50 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4262,7 +4262,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4337,7 +4337,7 @@
     <h3>Question 51 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4414,7 +4414,7 @@
     <h3>Question 52 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4495,7 +4495,7 @@
     <h3>Question 53 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4571,7 +4571,7 @@
     <h3>Question 54 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4652,7 +4652,7 @@
     <h3>Question 55 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4698,7 +4698,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4767,7 +4767,7 @@
     <h3>Question 56 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4848,7 +4848,7 @@
     <h3>Question 57 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4933,7 +4933,7 @@
     <h3>Question 58 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5019,7 +5019,7 @@
     <h3>Question 59 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5104,7 +5104,7 @@
     <h3>Question 60 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5156,7 +5156,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5230,7 +5230,7 @@
     <h3>Question 61 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5315,7 +5315,7 @@
     <h3>Question 62 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5400,7 +5400,7 @@
     <h3>Question 63 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5485,7 +5485,7 @@
     <h3>Question 64 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -6053,6 +6053,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
