--- a/K53_Learners_Test/b_heavyvehicle_test.html
+++ b/K53_Learners_Test/b_heavyvehicle_test.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -182,7 +182,7 @@
     <h3>Question 3 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -264,7 +264,7 @@
     <h3>Question 4 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -340,7 +340,7 @@
     <h3>Question 5 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -422,7 +422,7 @@
     <h3>Question 6 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -500,7 +500,7 @@
     <h3>Question 7 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -581,7 +581,7 @@
     <h3>Question 8 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -658,7 +658,7 @@
     <h3>Question 9 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -739,7 +739,7 @@
     <h3>Question 10 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -783,7 +783,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -857,7 +857,7 @@
     <h3>Question 11 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -939,7 +939,7 @@
     <h3>Question 12 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1017,7 +1017,7 @@
     <h3>Question 13 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1099,7 +1099,7 @@
     <h3>Question 14 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1176,7 +1176,7 @@
     <h3>Question 15 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1227,7 +1227,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1320,7 +1320,7 @@
     <h3>Question 16 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1402,7 +1402,7 @@
     <h3>Question 17 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1482,7 +1482,7 @@
     <h3>Question 18 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1560,7 +1560,7 @@
     <h3>Question 19 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1640,7 +1640,7 @@
     <h3>Question 20 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1684,7 +1684,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1759,7 +1759,7 @@
     <h3>Question 21 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1840,7 +1840,7 @@
     <h3>Question 22 of   64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1917,7 +1917,7 @@
     <h3>Question 23 of   15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2000,7 +2000,7 @@
     <h3>Question 24 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2077,7 +2077,7 @@
     <h3>Question 25 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2159,7 +2159,7 @@
     <h3>Question 26 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2237,7 +2237,7 @@
     <h3>Question 27 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2318,7 +2318,7 @@
     <h3>Question 28 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2396,7 +2396,7 @@
     <h3>Question 29 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2477,7 +2477,7 @@
     <h3>Question 30 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2521,7 +2521,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2618,7 +2618,7 @@
     <h3>Question 31 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2699,7 +2699,7 @@
     <h3>Question 32 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2775,7 +2775,7 @@
     <h3>Question 33 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2856,7 +2856,7 @@
     <h3>Question 34 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2932,7 +2932,7 @@
     <h3>Question 35 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2982,7 +2982,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3050,7 +3050,7 @@
     <h3>Question 36 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3128,7 +3128,7 @@
     <h3>Question 37 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3211,7 +3211,7 @@
     <h3>Question 38 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3288,7 +3288,7 @@
     <h3>Question 39 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3365,7 +3365,7 @@
     <h3>Question 40 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3409,7 +3409,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3484,7 +3484,7 @@
     <h3>Question 41 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3565,7 +3565,7 @@
     <h3>Question 42 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3642,7 +3642,7 @@
     <h3>Question 43 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3723,7 +3723,7 @@
     <h3>Question 44 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3802,7 +3802,7 @@
     <h3>Question 45 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3907,7 +3907,7 @@
     <h3>Question 46 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -3994,7 +3994,7 @@
     <h3>Question 47 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4074,7 +4074,7 @@
     <h3>Question 48 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4152,7 +4152,7 @@
     <h3>Question 49 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4232,7 +4232,7 @@
     <h3>Question 50 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4276,7 +4276,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4352,7 +4352,7 @@
     <h3>Question 51 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4433,7 +4433,7 @@
     <h3>Question 52 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4510,7 +4510,7 @@
     <h3>Question 53 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4590,7 +4590,7 @@
     <h3>Question 54 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4667,7 +4667,7 @@
     <h3>Question 55 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4717,7 +4717,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4785,7 +4785,7 @@
     <h3>Question 56 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4862,7 +4862,7 @@
     <h3>Question 57 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4947,7 +4947,7 @@
     <h3>Question 58 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5033,7 +5033,7 @@
     <h3>Question 59 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5118,7 +5118,7 @@
     <h3>Question 60 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5170,7 +5170,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5244,7 +5244,7 @@
     <h3>Question 61 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5329,7 +5329,7 @@
     <h3>Question 62 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5414,7 +5414,7 @@
     <h3>Question 63 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5499,7 +5499,7 @@
     <h3>Question 64 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -6067,6 +6067,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
