--- a/K53_Rules_Test/road_rules_test2.html
+++ b/K53_Rules_Test/road_rules_test2.html
@@ -2746,6 +2746,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var rules_test2 = score; 
+		localStorage.setItem("rules_test2", rules_test2);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3093,6 +3095,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
