--- a/K53_Rules_Test/road_rules_test3.html
+++ b/K53_Rules_Test/road_rules_test3.html
@@ -2746,6 +2746,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var rules_test3 = score; 
+		localStorage.setItem("rules_test3", rules_test3);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3094,6 +3096,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
