--- a/K53_Rules_Test/road_rules_test4.html
+++ b/K53_Rules_Test/road_rules_test4.html
@@ -2744,6 +2744,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var rules_test4 = score; 
+		localStorage.setItem("rules_test4", rules_test4);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3092,6 +3094,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
