--- a/K53_Rules_Test/road_rules_test5.html
+++ b/K53_Rules_Test/road_rules_test5.html
@@ -2747,6 +2747,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var rules_test5 = score; 
+		localStorage.setItem("rules_test5", rules_test5);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3095,6 +3097,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
